--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,7 +43,7 @@
     <parent>
         <groupId>org.demoiselle.signer</groupId>
         <artifactId>parent</artifactId>
-        <version>3.7.1</version>
+        <version>3.7.2-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
 
