--- a/core/src/main/resources/signer_core_messages.properties
+++ b/core/src/main/resources/signer_core_messages.properties
@@ -36,7 +36,6 @@ error.file.not.found                     = O arquivo {0} n\u00E3o foi encontrado
 error.file.remove                        = Ocorreu uma falha ao tentar remover o arquivo: {0}
 error.filenotfound.userhome              = Arquivo n\u00E3o encontrado no equipamento do usu\u00E1rio
 error.get.chain                          = N\u00E3o foi poss\u00EDvel resgatar a cadeia de autoridades do certificado informado
-error.get.content.empty                  = N\u00E3o foi encontrado conte\u00FAdo anexado na assinatura.
 error.get.content.pkcs7                  = Falha ao tentar recuperar o conte\u00FAdo do arquivo PKCS7
 error.get.value.field                    = Ocorreu um erro ao recuperar o valor do campo: {0}
 error.hash.empty                         = Ocorreu um erro ao obter o hash online, pois est\u00E1 vazio.
@@ -46,17 +45,18 @@ error.invalid.bytes.pkcs7                = Bytes inv\u00E1lidos localizados no p
 error.invalid.certificate                = Problema com o certificado: inv\u00E1lido ou  corrompido  ou nulo.
 error.invalid.crl                        = N\u00E3o foi poss\u00EDvel recuperar um endere\u00E7o v\u00E1lido de LCR (lista de certificados revogados) no certificado.
 error.invalid.signature                  = Assinatura inv\u00E1lida! {0}
-error.io                                 = Algum erro de I/O ocorreu {0}
-error.jks.certificate                    = Erro ao tentar recuperar certificado armazenado no Keystore (icpbrasil.jks)
+error.io                                 = Ocorreu um erro de leitura ou grava\u00E7\u00E3o em  disco {0}
+error.jks.certificate                    = Erro ao tentar recuperar certificado armazenado no Keystore (icpbrasil.jks) \n {0}
 error.keyStore.pass                      = Erro ao carregar o Keystore a partir do Arquivo {0}. Senha incorreta.
 error.keyStore.unknow.format             = Erro ao carregar o Keystore a partir do Arquivo {0}. Formato desconhecido.
 error.keystore.from.file                 = Erro ao carregar o Keytore (chaveiro .p12) a partir do arquivo.
 error.keystore.from.inputstream=Erro ao carregar o Keytore a partir do InputStream
 error.keystore.type                      = O provedor n\u00E3o suporta este tipo de keystore
 error.load.algorithm                     = Erro ao carregar o algoritmo: {0}
+error.load.provider                      = Privider {0} n\u00E3o encontrado.
 error.load.driver                        = Procurando o driver {0}, n\u00E3o encontrado neste equipamento\!
 error.load.driver.null                   = Nenhum, driver foi encontrado
-error.load.keystore                      = Erro ao carregar os certificados do keystore padr\u00E3o do componente (icpbrasil.jks)
+error.load.keystore                      = Erro ao carregar os certificados do keystore padr\u00E3o do componente (icpbrasil.jks) \n {0}
 error.keystore.null=Keystore vazia
 error.load.module.pcks11                 = Erro ao carregar o m\u00F3dulo PKCS#11, n\u00E3o encontrado.
 error.load.mscapi                        = Erro ao carregar um keystore atrav\u00E9s do MSCAPI.
@@ -123,37 +123,37 @@ error.xml.sax.exception					 =Erro ao executar parser do XML\: {0}
 error.xml.ioexception					 =Erro ao processar XML de entrada\: {0}
 error.xml.hash							 = Erro ao gerar hash do documento XML\: {0}
 error.xml.file.null						 = O par\u00E2metro {0} que indica o nome e local do arquivo  n\u00E3o pode ser nulo nem vazio\!\!
-error.xml.parameter.null=O par\u00E2metro {0} n\u00E3o pode ser nulo nem vazio\!
-error.xml.string.file.null=O par\u00E2metro {0} que cont\u00E9m a string que representa um documento XML n\u00E3o pode ser nulo nem vazio\!\!
-error.xml.not.valid.file=O arquivo informado n\u00E3o possui a extens\u00E3o .xml
-error.xml.Invalid.canonicalizer = Erro de Canonicaliza\u00E7\u00E3o do XML {0}
-error.xml.canonicalizer.not.allowed=Algoritmo de canoniza\u00E7\u00E3o inv\u00E1lido
-error.xml.digest.invalid=Resumo criptogr\u00E1fico n\u00E3o confere com o conte\u00FAdo do documento
-error.xml.signature.method.not.found=N\u00E3o foi encontrado o m\u00E9todo de Assinatura
-error.xml.invalid.signature.timestamp=Erro na valida\u00E7\u00E3o da propriedade SignatureTimeStamp\: {0}
-error.xml.signature.invalid=Erro ao validar o resumo criptogr\u00E1fico da assinatura
-error.xml.nosuch.algorithm.exception=Algoritmo de assinatura inv\u00E1lido ou n\u00E3o suportado
-error.xml.invalid.key.exception=Chave criptogr\u00E1fica inv\u00E1lida
-error.xml.detached.content=A valida\u00E7\u00E3o da assinatura depende do arquivo a ser verificado, informe esse conte\u00FAdo
-error.xml.signature.not.found=O documento n\u00E3o cont\u00E9m assinatura
-error.xml.element.not.found=Elemento {0} obrigat\u00F3rio para a pol\u00EDtica n\u00E3o encontrado\!
-error.xml.hash.invalid=Resumo criptogr\u00E1fico do arquivo n\u00E3o corresponde ao da assinatura
-error.xml.\ hash.not.found=Algoritmo do resumo n\u00E3o informado\!
-error.xml.hash.data.invalid="Dados do resumo inv\u00E1lidos\: " {}
-error.xml.parent.element.not.found=N\u00F3 pai do elemento\:  {0} n\u00E3o encontrado
-error.xml.invalid.name=Nome de elemento inv\u00E1lido para o n\u00F3 \: {0}
-error.xml.policy.null=A Identifica\u00E7\u00E3o da pol\u00EDtica est\u00E1 nula
-error.xml.size.not.allowed=Tamanho da chave criptogr\u00E1fica menor que a requisitada pela pol\u00EDtica
-error.xml.invalid.algorithm=Algoritmo inv\u00E1lido para a pol\u00EDtica {0}
-error.xml.invalid.digest.method=Algoritimo de resumo {0} inv\u00E1lido para a assinatura
-error.xml.document.fail=Erro na verifica\u00E7\u00E3o do documento
-error.xml.signing.time.not.found=Elemento SigningTime n\u00E3o encontrado na assinatura
-error.xml.element.not.found.signature=Elemento {0} no elemento {1} n\u00E3o encontrado na assinatura"
-error.xml.false.to.file=Para usar essa fun\u00E7\u00E3o deve indicar verdadeiro para o par\u00E2metro isFileLocation
-error.xml.signature.file.not.found=N\u00E3o foi possivel criar o arquivo para assinatura destachada em\: {0}
-error.xml.signature.file.null=O nome e local da Assinatura XML desanexada n\u00E3o pode ser nulo
-error.xml.policy.id.not.found=N\u00E3o foi encontrado o ID da politica de assinatura
-error.xml.signature.hash=Resumo da assinatura n\u00E3o confere
+error.xml.parameter.null				 =O par\u00E2metro {0} n\u00E3o pode ser nulo nem vazio\!
+error.xml.string.file.null				 =O par\u00E2metro {0} que cont\u00E9m a string que representa um documento XML n\u00E3o pode ser nulo nem vazio\!\!
+error.xml.not.valid.file				 =O arquivo informado n\u00E3o possui a extens\u00E3o .xml
+error.xml.Invalid.canonicalizer 		 = Erro de Canonicaliza\u00E7\u00E3o do XML {0}
+error.xml.canonicalizer.not.allowed		 =Algoritmo de canoniza\u00E7\u00E3o inv\u00E1lido
+error.xml.digest.invalid				 =Resumo criptogr\u00E1fico n\u00E3o confere com o conte\u00FAdo do documento
+error.xml.signature.method.not.found	=N\u00E3o foi encontrado o m\u00E9todo de Assinatura
+error.xml.invalid.signature.timestamp	=Erro na valida\u00E7\u00E3o da propriedade SignatureTimeStamp\: {0}
+error.xml.signature.invalid				=Erro ao validar o resumo criptogr\u00E1fico da assinatura
+error.xml.nosuch.algorithm.exception	=Algoritmo de assinatura inv\u00E1lido ou n\u00E3o suportado
+error.xml.invalid.key.exception			=Chave criptogr\u00E1fica inv\u00E1lida
+error.xml.detached.content				=A valida\u00E7\u00E3o da assinatura depende do arquivo a ser verificado, informe esse conte\u00FAdo
+error.xml.signature.not.found			=O documento n\u00E3o cont\u00E9m assinatura
+error.xml.element.not.found				=Elemento {0} obrigat\u00F3rio para a pol\u00EDtica n\u00E3o encontrado\!
+error.xml.hash.invalid					=Resumo criptogr\u00E1fico do arquivo n\u00E3o corresponde ao da assinatura
+error.xml.\ hash.not.found				=Algoritmo do resumo n\u00E3o informado\!
+error.xml.hash.data.invalid				=Dados do resumo inv\u00E1lidos\:  {0}
+error.xml.parent.element.not.found		=N\u00F3 pai do elemento\:  {0} n\u00E3o encontrado
+error.xml.invalid.name					=Nome de elemento inv\u00E1lido para o n\u00F3 \: {0}
+error.xml.policy.null					=A Identifica\u00E7\u00E3o da pol\u00EDtica est\u00E1 nula
+error.xml.size.not.allowed				=Tamanho da chave criptogr\u00E1fica menor que a requisitada pela pol\u00EDtica
+error.xml.invalid.algorithm				=Algoritmo inv\u00E1lido para a pol\u00EDtica {0}
+error.xml.invalid.digest.method			=Algoritimo de resumo {0} inv\u00E1lido para a assinatura
+error.xml.document.fail					=Erro na verifica\u00E7\u00E3o do documento
+error.xml.signing.time.not.found		=Elemento SigningTime n\u00E3o encontrado na assinatura
+error.xml.element.not.found.signature	=Elemento {0} no elemento {1} n\u00E3o encontrado na assinatura"
+error.xml.false.to.file					=Para usar essa fun\u00E7\u00E3o deve indicar verdadeiro para o par\u00E2metro isFileLocation
+error.xml.signature.file.not.found		=N\u00E3o foi possivel criar o arquivo para assinatura destachada em\: {0}
+error.xml.signature.file.null			=O nome e local da Assinatura XML desanexada n\u00E3o pode ser nulo
+error.xml.policy.id.not.found			=N\u00E3o foi encontrado o ID da politica de assinatura
+error.xml.signature.hash				=Resumo da assinatura n\u00E3o confere
 error.date.parser						 = Ocorreu um erro ao converter a string para data\: {0}
 error.signature.invalid                  = A assinatura fornecida \u00E9 inv\u00E1lida, e apresenta o erro \n {0}
 error.signature.mismatch                 = O documento foi alterado ap\u00F3s a assinatura ou esta n\u00E3o pertence a este documento.
@@ -170,14 +170,17 @@ error.unknown.service                    = Servi\u00E7o da URL desconhecido
 error.unrecoverable.key                  = Imposs\u00EDvel recuperar a chave privada do keystore
 error.unsigned.attribute.not.found       = N\u00E3o foi encontrado o atributo N\u00C3O assinado:  {0}, obrigat\u00F3rio conforme a politica usada na assinatura {1}
 error.unsigned.attribute.table.not.found = N\u00E3o foi encontrada a lista de atributos N\u00C3O assinados no pacote PKCS7.
-error.validate.on.crl                    = N\u00E3o foi poss\u00EDvel verificar se o certificado est\u00E1 Revogado. Nenhuma das listas do certificado estava dispon\u00EDvel (on-line): \n{0}
+error.validate.on.crl                    = N\u00E3o foi poss\u00EDvel verificar se o certificado est\u00E1 Revogado, com a lista {0} 
 error.value.null                         = O conte\u00FAdo a ser assinado ou validado n\u00E3o pode ser nulo.
 error.input.stream.invalid				 = O valor informado \u00E9 nulo ou inv\u00E1lido para o keystore em arquivo
 error.ca.verify.certificate.signature	= Erro ao verificar a assinatura do certificado pela AC\: {0}
 error.keystore.type.invalid				= Tipo informado para o keystore \u00E9 inv\u00E1lido, DEVE ser\:  PKCS12 ou JKS
 error.xml.parser						= Erro ao carregar/ler o arquivo XML\: {0}
 error.cert.digest						= Erro ao gerar resumo(hash) do certificado\: {0}
-error.unknow.subject.alternative.name=Valor de Subject Alternative Name, desconhecido
+error.unknow.subject.alternative.name  =Valor de Subject Alternative Name, desconhecido
+error.clr.not.access					= N\u00E3o foi poss\u00EDvel acessar a LCR, pelo motivo: {0}
+
+info.get.content.empty                  = Assinatura sem conte\u00FAdo anexado.
 info.add.driver                  		= Adicionando o driver {0} ::  {1}  na lista de drivers do componente
 info.add.file.zip               		= Adicionando o arquivo {0} ao comprimido (zip).
 info.algorithm.id                		= OID do algoritmo que ir\u00E1 gerar assinatura: {0}
@@ -185,12 +188,12 @@ info.algorithm.name              		= Nome do  algoritmo que ir\u00E1 gerar a ass
 info.algorithm.policy.default    = Algoritmo padr\u00E3o contido na pol\u00EDtica:  {0}
 info.attribute.validation        = Iniciando a valida\u00E7\u00E3o dos atributos
 info.cache.mode                  = O modo cache de CAs est\u00E1: {0}
-info.created.crl                 = O reposit\u00F3rio de LCR (lista de certificados revogados)  foi criado com sucesso!.
-info.creating.crl                = Criando o reposit\u00F3rio de LCRs (Listas de Certificados Revogados)
+info.created.crl                 = O reposit\u00F3rio de LCR (lista de certificados revogados) j\u00E1 existe em {0}.
+info.creating.crl                = Criando o reposit\u00F3rio de LCRs (Listas de Certificados Revogados) em {0}.
 info.crl.found                   = Foi encontrada uma LCR v\u00E1lida: {0}
 info.crl.offline.found           = Foi encontrada uma LCR OffLine v\u00E1lida
-info.crl.validate=O modo de valida\u00E7\u00E3o das listas de certificados revogados foi definida para\: {0}
-info.crl.timeout=O valor de tempo m\u00E1ximo de conex\u00E3o para recuperar as listas de certificados revogados foi definido em \: {0}
+info.crl.validate				=O modo de valida\u00E7\u00E3o das listas de certificados revogados foi definida para\: {0}
+info.crl.timeout				=O valor de tempo m\u00E1ximo de conex\u00E3o para recuperar as listas de certificados revogados foi definido em \: {0}
 info.date.utc                    = Data no formato: UTCTime yyMMddHHmmssz : {0}
 info.file.destination            = O arquivo ser\u00E1 gerado em: {0}
 info.file.downloading            = Recuperando REMOTAMENTE as cadeias da ICP-Brasil {0}.
@@ -216,7 +219,7 @@ info.provider.name.iti           = Provedor ONLINE de cadeias ICP-Brasil do ITI 
 info.provider.name.serpro        = Provedor ONLINE de cadeias ICP-Brasil do SERPRO ({0})
 info.provider.name.userhome      = Provedor OFFLINE de cadeias ICP-Brasil arquivo no diretorio local do usu\u00E1rio {0}
 info.proxy.running               = Usando proxy {0}  na porta {1} com usu\u00E1rio {2}.
-info.proxy.noproxy=Sem proxy
+info.proxy.noproxy				=Sem proxy
 info.recovered.certs             = Recuperou {0} certificados do arquivo que foi baixado.
 info.repository.service.download = Baixando a LCR {0} ...
 info.return.oid                  = Retornando o atributo : {0}
@@ -243,7 +246,7 @@ info.timestamp.prepare.request   = Montando a requisi\u00E7\u00E3o para o carimb
 info.timestamp.response          = Obtendo a resposta do carimbo do tempo
 info.timestamp.send.request      = Envia a solicita\u00E7\u00E3o de conex\u00E3o para o servidor de carimbo do tempo.
 info.timestamp.sign.request      = Efetuando a  assinatura do conte\u00FAdo para requisi\u00E7\u00E3o.
-info.timestamp.sign.request.end=Terminou a  assinatura do conte\u00FAdo para requisi\u00E7\u00E3o.
+info.timestamp.sign.request.end	=Terminou a  assinatura do conte\u00FAdo para requisi\u00E7\u00E3o.
 info.timestamp.socket.response   = Obtendo a resposta do socket do servidor de carimbo do tempo.
 info.timestamp.socket.write      = Escrevendo no socket
 info.timestamp.status            = Situa\u00E7\u00E3o da resposta do carimbo do tempo.: {0}
@@ -259,14 +262,15 @@ info.trust.point                 = Ponto de Confian\u00E7a ... {0}
 info.tsa.connecting              = Carregando o servi\u00E7o do carimbador de tempo.
 info.unsigned.attribute          = Efetuando a verifica\u00E7\u00E3o dos atributos N\u00C3O assinados
 info.update.crl                  = A LCR \u00E9 antiga, executando atualiza\u00E7\u00E3o...
-info.crl.online=O modo LCR OnLine foi definido para\: {0}
-info.crl.index=O arquivo de indice para cache de LCR foi definido para\: {0}
-info.crl.path=O diretorio para cache de LCR foi definido para\: {0}
-info.lpa.path=O diret\u00F3rio do cache de LPA (Lista de Politica de Assinaturas) foi definido para\: {0}
-info.lpa.online=O modo LPA online foi definido para\: {0}
-info.ca.cache=O cache de Autoridade Certificadoras est\u00E1\: {0}
-info.ca.validated=A verifica\u00E7\u00E3o do certificado assinado pela AC passou\!
-info.validating.key.length       = Validando o tamanho da chave.
+info.crl.online					=O modo LCR OnLine foi definido para\: {0}
+info.crl.index					=O arquivo de indice para cache de LCR foi definido para\: {0}
+info.crl.path					=O diretorio para cache de LCR foi definido para\: {0}
+info.lpa.path					=O diret\u00F3rio do cache de LPA (Lista de Politica de Assinaturas) foi definido para\: {0}
+info.lpa.online					=O modo LPA online foi definido para\: {0}
+info.ca.cache					=O cache de Autoridade Certificadoras est\u00E1\: {0}
+info.ca.validated				=A verifica\u00E7\u00E3o do certificado assinado pela AC passou\!
+info.validating.key.length      = Validando o tamanho da chave.
+info.co.signature				= Foi(ram) encontrada(s) {0} contra-assinatura(s).
 
 text.certicate.Authority.info.acess = Informa\u00E7\u00F5es de acesso da autoridade:
 text.certicate.IssuerDN             = Certificado de:
